@@ -38,8 +38,8 @@ class CommandService {
 
         CommandResult commandResult = command.runCommand(script);
         List<String> commandResultMessages = commandResult.getMessages();
-        if (!commandResultMessages.isEmpty() && commandResultMessages.get(0).contains("IOException")) {
-            throw new IOException(commandResultMessages.get(0));
+        if (!commandResultMessages.isEmpty() && commandResultMessages.getFirst().contains("IOException")) {
+            throw new IOException(commandResultMessages.getFirst());
         }
         return commandResult;
     }
